Don't update annotations when server does not support it

Don't try to update annotations when server does not have METADATA or
ANNOTATEMORE capability.

Fixes a warning shown when user changed something in Folder properties
in KMail

BUG: 284527
FIXED-IN: 4.11.3